apps/base/nextcloud/endpoints.yml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud
subsets:
  - addresses:
      - ip: 192.168.11.150
    ports:
      - port: 11000
        name: http
