apps/base/nextcloud/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
