apps/base/nextcloud/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: traefik
      namespace: infrastructure 
      sectionName: internal-https
    - name: traefik
      namespace: infrastructure 
      sectionName: external-https
  rules:
    - backendRefs:
        - name: nextcloud
          port: 80
